# relate-submodule

./: README.md  README_manual.md  ari_workflow.py  docs-run-notebooks.sh  requirements.txt  setup.cfg  workflow.py  workflow_old.py
.github/workflows/: conda-release.yml
binder/: environment.yml
conda-build/: build_env.yaml  meta.yaml
data/: decode_hg38_sexavg_per_gen.tsv
docs/: _quarto.yml  index.qmd  objects.txt
docs/_inv/: griffe_objects.txt  python_objects.txt
docs/pages/: overview.ipynb
relate1k/: modulename.py
test/: test_modulename.py
