[metadata]
name = relate1k
version = 0.2.6
author = Your Name
author_email = your@email.com
description= Project description
url = https://github.com/munch-group/relate1k
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires=file: requirements.txt

[options.packages.find]
exclude =
    test*
    
[options.package_data]
relate1k =
    data/*.txt, data/*.csv, data/*.pickle, data/*.h5

[options.entry_points]
console_scripts =
    scriptname = relate1k.modulename:scriptname
